--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.ng.NaijaTalks">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.ng.NaijaTalks">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:allowBackup="true"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:fullBackupContent="@xml/backup_rules"
-            android:icon="@drawable/logo2"
-            android:label="@string/app_name"
-            android:roundIcon="@drawable/logo2"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.9JaTalks"
-            tools:targetApi="31">
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@drawable/logo2"
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/logo2"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.9JaTalks"
+        tools:targetApi="31">
         <activity
-                android:name=".Resources"
-                android:exported="false" />
+            android:name=".ResourcesDetails"
+            android:exported="false" />
         <activity
-                android:name=".Dashboard"
-                android:exported="false" />
+            android:name=".CategoryView"
+            android:exported="false" />
         <activity
-                android:name=".Register"
-                android:exported="false" />
+            android:name=".EventDetail"
+            android:exported="false" />
         <activity
-                android:name=".SplashScreen"
-                android:exported="true">
+            android:name=".Events"
+            android:exported="false" />
+        <activity
+            android:name=".UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".Groups"
+            android:exported="false" />
+        <activity
+            android:name=".AllUsers"
+            android:exported="false" />
+        <activity
+            android:name=".Resources"
+            android:exported="false" />
+        <activity
+            android:name=".Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".Register"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,9 +55,9 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".MainActivity"
-                android:exported="true"
-                android:screenOrientation="portrait" />
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
