--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".JobViewPage"
+            android:exported="false" />
+        <activity
             android:name=".Opportunities"
             android:exported="false" />
         <activity
